Removido um for do código e tempo de execução diminuido brutalmente